# dog

./: LICENSE  README.md  example.py  example_jax.py  pyproject.toml
src/dog/: __init__.py  dog.py
src/dog/jax/: __init__.py  averager.py  dog.py
src/dog/torch/: __init__.py  dog.py
src/dog_optimizer/: averager.py  dog.py
src/jax/: __init__.py  averager.py  dog.py
