[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dog-optimizer"
version = "1.0.2"
authors = [
  { name="Maor Ivgi" },
  { name="Oliver Hinder" },
  { name="Yair Carmon" }
]
description = "implementation of the algorithms in the paper DoG is SGD's Best Friend: A Parameter-Free Dynamic Step Size Schedule"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/formll/dog"
"Paper" = "https://arxiv.org/abs/2302.12022"
